--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ManejoServicioKotlinInc">
+
+        <receiver
+            android:name=".AudioReceiver"
+            android:enabled="true" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -19,8 +24,12 @@
             </intent-filter>
         </activity>
 
-        <service android:enabled="true" android:name=".ElServicio"
+
+        <service
+            android:name=".ElServicio"
+            android:enabled="true"
             android:exported="false" />
+
     </application>
 
 </manifest>
